modifier greetings.html

--- a/src/main/webapp/greetings.html
+++ b/src/main/webapp/greetings.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Start Page</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    </head>
-    <body>
-        <h1>Hello World!</h1>
-    </body>
+<head>
+    <title>User Lottery Winnings</title>
+</head>
+<body>
+    <h1>User Lottery Winnings</h1>
+    <form action="hello" method="post">
+        <label for="username">Enter your username:</label><br>
+        <input type="text" id="username" name="username"><br><br>
+        <input type="submit" value="Submit">
+    </form>
+    <hr>
+    <h1>Restricted Access</h1>
+    <p>Nope,you are restricted!</p>
+    <hr>
+    <h1>Blacklisted User</h1>
+    <p>You are not allowed to access this resource.</p>
+</body>
 </html>
